src/main/java/com/example/demo/exceptions/errors/UserNoActivate.java
package com.example.demo.exceptions.errors;

public class UserNoActivate extends RuntimeException{
    public UserNoActivate(String message) {
        super(message);
    }

}
